--- a/TaskApplication/appsettings.json
+++ b/TaskApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "UserConnection": "Data Source=DESKTOP-PPOBAHV\\MSSQLSERVER01;Initial Catalog=employee;Integrated Security=True;TrustServerCertificate=True;"
+    "UserConnection": "Data Source=DESKTOP-4Q7RIKQ;Initial Catalog=employee;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
