--- a/TaskApplication/appsettings.json
+++ b/TaskApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UserConnection": "Data Source=DESKTOP-PPOBAHV\\MSSQLSERVER01;Initial Catalog=employee;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
